# coreason-api

./: .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  NOTICE  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
src/coreason_api/: __init__.py  adapters.py  config.py  dependencies.py  main.py  middleware.py
src/coreason_api/routers/: architect.py  runtime.py  system.py
src/coreason_api/utils/: __init__.py  logger.py
tests/: conftest.py  test_adapters.py  test_adapters_edge_cases.py  test_adapters_mcp.py  test_architect.py  test_architect_edge_cases.py  test_architect_unicode_edge_cases.py  test_config.py  test_dependencies.py  test_env.py  test_main.py  test_middleware.py  test_routers_architect.py  test_routers_runtime.py  test_routers_runtime_budget.py  test_routers_runtime_execution.py  test_routers_system.py  test_runtime.py  test_runtime_edge_cases.py  test_runtime_policy.py  test_system.py  test_utils.py
