[tool.poetry]
name = "coreason_api"
version = "0.1.0"
description = "actual FastAPI application that coordinates the ecosystem"
authors = ["Gowtham A Rao <gowtham.rao@coreason.ai>"]
license = "Prosperity-3.0"
readme = "README.md"
packages = [{include = "coreason_api", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12, <3.15"
loguru = "^0.7.2"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
pydantic = "^2.12.5"
coreason-vault = "^0.1.0"
coreason-identity = "^0.1.0"
coreason-budget = "^0.1.0"
coreason-veritas = "^0.6.0"
coreason-mcp = "^0.1.0"
coreason-manifest = "^0.1.0"
starlette = "^0.50.0"
uuid = "^1.30"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.8"
pre-commit = "^3.7.1"
pytest-cov = "^5.0.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.26"
mypy = "^1.19.1"
types-requests = "^2.32.4.20260107"
types-ujson = "^5.10.0.20250822"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "coreason_api"
version = "0.1.0"
description = "actual FastAPI application that coordinates the ecosystem"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Gowtham A Rao", email = "gowtham.rao@coreason.ai" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/CoReason-AI/coreason_api"
Repository = "https://github.com/CoReason-AI/coreason_api"
Documentation = "https://github.com/CoReason-AI/coreason_api"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*"]
